--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="todo.css">
+  <link rel="stylesheet" href="style.css">
   
   <title>Document</title>
 </head>
@@ -21,7 +21,7 @@
 
   </div>  
 
-  <script src="todo.js"></script>
+  <script src="static.js"></script>
 </div>
 </body>
 
