--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="main-container">
-  <h2>Todo App</h2>
+  <h2>To-do App</h2>
   
   <div class="grid-container"><input type="text" id="todo-input" placeholder="Enter task">
   <input type="date" id="todo-date">
